@@ -7,8 +7,10 @@ dnl GNOME_COMMON_INIT
 AC_DEFUN([GNOME_COMMON_INIT],
 [
 	GNOME_ACLOCAL_DIR="$GNOME_COMMON_MACROS_DIR"
+	GNOME_ACLOCAL_FLAGS="$ACLOCAL_FLAGS"
 	AC_SUBST(GNOME_ACLOCAL_DIR)
+	AC_SUBST(GNOME_ACLOCAL_FLAGS)
 
-	ACLOCAL="$ACLOCAL $ACLOCAL_FLAGS"
+	ACLOCAL="$ACLOCAL $GNOME_ACLOCAL_FLAGS"
 ])
 
